# virtual-vehicle-sensor-node

./: .cppcheck-suppressions  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: CommInterface.hpp  DataProcessor.hpp  Diagnostics.hpp  MessageParser.hpp  Scheduler.hpp  SensorManager.hpp
src/: CommInterface.cpp  DataProcessor.cpp  Diagnostics.cpp  MessageParser.cpp  Scheduler.cpp  SensorManager.cpp  main.cpp
tests/: test_comm.cpp  test_sensors.cpp
